--- a/packages/core/src/component/alert/AlertOverview.mdx
+++ b/packages/core/src/component/alert/AlertOverview.mdx
@@ -21,6 +21,6 @@ import {Alert} from "./Alert"
 
 > <Alert title="アラートのタイトル">アラートの詳細文</Alert>
 
-モーダル表示やウインドウとしてアラート・コンポーネントを表示させたい場合は、`WindowBase`コンポーネントで括ったり、`Modal`コンポーネントに渡すようにしてください。
+モーダル表示やウインドウとしてアラート・コンポーネントを表示させたい場合は、`WindowBase`コンポーネントで括ったり、`Overlay`コンポーネントに渡すようにしてください。
 
 <Canvas of={Stories.Story} />
