ドキュメント削除・微修正

--- a/packages/core/doc/introduction.mdx
+++ b/packages/core/doc/introduction.mdx
@@ -33,6 +33,8 @@ import 'basement-ui/module/basement-ui.css';
 `BasementUIProvider`をReactアプリの直下に追加する必要があります。
 
 ```
+import { BasementUIProvider } from 'basement-ui/module/context/BasementUIContext';
+
 export function App() {
   return (
     <BasementUIProvider>
