BM-2 全般的に大改修

--- a/packages/core/src/form-items/button/ButtonOverview.mdx
+++ b/packages/core/src/form-items/button/ButtonOverview.mdx
@@ -2,7 +2,7 @@ import { Canvas, Controls, Meta } from '@storybook/blocks';
 
 import * as Stories from './Button.stories';
 
-<Meta of={Stories} />
+<Meta title="Form Item/Button" />
 
 # ボタン
 
@@ -21,4 +21,4 @@ import * as Stories from './Button.stories';
 
 ## Props
 
-<Controls />
+<Controls of={Stories.Story} />
